New Dockerfile to build tomcat v8 container with Java 8 distro and a start-tomcat.sh script